<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jgsdgjsdkgjsdk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233C54"
    tools:context=".HomePage">

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#4077AA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Logout" />

        <Button
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Settings" />

        <Button
            android:id="@+id/Store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Store" />

        <Button
            android:id="@+id/Social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Social" />

        <Button
            android:id="@+id/curUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="TOWER DEFENSE"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/PlayButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="#5AA7F0"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="PLAY" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>