<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233C54"
    tools:context=".LeaderboardsPage">

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#4077AA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/LeaderboardBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LeaderboardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="Level"
        app:layout_constraintStart_toEndOf="@+id/LeaderboardBack"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LeaderboardKills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="Kills"
        app:layout_constraintStart_toEndOf="@+id/LeaderboardLevel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LeaderboardFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="Friends only: OFF"
        app:layout_constraintStart_toEndOf="@+id/leaderboardUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LeaderboardBack">

        <LinearLayout
            android:id="@+id/LeaderboardUsernameList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Username" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardLevelList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Level" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardKillsList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Kills" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardsWinsList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Wins" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardsLossList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Losses" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/leaderboardsWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="Wins"
        app:layout_constraintStart_toEndOf="@+id/LeaderboardKills"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderboardUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA7F0"
        android:fontFamily="@font/roboto_bold"
        android:text="Username"
        app:layout_constraintStart_toEndOf="@+id/leaderboardsWins"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>