...
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto"
            android:text="Back" />
...
            android:layout_marginTop="0dp"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Recent Players" />

        <Button
            android:id="@+id/Leaderboards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5AA7F0"
            android:fontFamily="@font/roboto_bold"
            android:text="Leaderboards" />

...
